[api] Pass in app.log.info to BFFS instance

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+npm-debug.log
+npm-error.log
 
 # Optional npm cache directory
 .npm
