--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "warehouse.ai",
   "version": "1.3.1",
   "description": "Modular front-end development through checks, automatic builds, and CDNs.",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "bin": {
     "warehouse": "bin/server"
   },
