--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "commenting": "^1.0.0",
     "concat-stream": "^1.5.0",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.8.1",
     "datastar": "~1.3.2",
     "errs": "^0.3.2",
     "etag": "^1.7.0",
