--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "GoDaddy.com Operating Company LLC",
   "license": "MIT",
   "dependencies": {
+    "access-control": "^1.0.0",
     "async": "^1.4.1",
     "bffs": "^4.0.0",
     "body-parser": "^1.13.2",
@@ -41,7 +42,6 @@
     "commenting": "^1.0.0",
     "concat-stream": "^1.5.0",
     "cookie-parser": "^1.3.5",
-    "cors": "^2.8.1",
     "datastar": "~1.3.2",
     "errs": "^0.3.2",
     "etag": "^1.7.0",
