--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "failure": "1.1.x",
     "gjallarhorn": "^1.2.1",
     "http-proxy": "^1.11.1",
-    "hyperquest": "^1.2.0",
+    "hyperquest": "~1.3.0",
     "ioredis": "^1.9.0",
     "json-try-parse": "^1.0.0",
     "lodash.merge": "~3.3.2",
