--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "npm-publish-split-stream": "^1.0.0",
     "npm-verify-stream": "^1.3.1",
     "once": "^1.3.2",
+    "passport": "0.3.2",
+    "passport-npm": "2.0.0",
     "readable-stream": "^2.0.2",
     "semver": "^5.0.1",
     "slay": "^1.0.0",
@@ -88,6 +90,7 @@
     "proxyquire": "^1.6.0",
     "registry-mock": "^2.0.0",
     "request": "^2.61.0",
-    "sinon": "^1.16.1"
+    "sinon": "^1.16.1",
+    "tmp": "0.0.31"
   }
 }
