--- a/package.json
+++ b/package.json
@@ -37,60 +37,60 @@
     "access-control": "^1.0.0",
     "async": "^1.4.1",
     "bffs": "^5.0.0",
-    "body-parser": "^1.13.2",
+    "body-parser": "~1.17.2",
     "carpenterd-api-client": "^1.3.0",
-    "commenting": "^1.0.0",
-    "concat-stream": "^1.5.0",
+    "commenting": "~1.0.3",
+    "concat-stream": "~1.6.0",
     "cookie-parser": "^1.3.5",
     "datastar": "~1.3.2",
     "errs": "^0.3.2",
-    "etag": "^1.7.0",
-    "extend": "^3.0.0",
+    "etag": "~1.8.0",
+    "extend": "~3.0.1",
     "failure": "1.1.x",
     "gjallarhorn": "^1.2.1",
-    "http-proxy": "^1.11.1",
+    "http-proxy": "~1.16.2",
     "hyperquest": "~1.3.0",
     "ioredis": "^1.9.0",
     "json-try-parse": "^1.0.0",
     "lodash.merge": "~3.3.2",
-    "mime": "^1.3.4",
-    "ndjson": "~1.4.2",
+    "mime": "~1.3.6",
+    "ndjson": "~1.4.4",
     "npm-publish-split-stream": "^1.0.0",
     "npm-verify-stream": "^1.3.1",
     "once": "^1.3.2",
     "passport": "0.3.2",
     "passport-npm": "2.0.0",
-    "readable-stream": "^2.0.2",
+    "readable-stream": "~2.2.11",
     "semver": "^5.0.1",
-    "slay": "^1.0.0",
+    "slay": "~1.0.2",
     "slay-config": "^2.1.0",
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
     "warehouse-models": "~5.6.0",
-    "winston": "^2.2.0",
+    "winston": "~2.3.1",
     "zipline": "^1.0.0"
   },
   "devDependencies": {
-    "assume": "^1.4.1",
+    "assume": "~1.5.1",
     "assume-sinon": "^0.0.0",
     "babel-eslint": "^6.1.2",
     "datastar-test-tools": "~1.0.0",
-    "diagnostics": "^1.0.1",
-    "eslint": "^3.5.0",
+    "diagnostics": "~1.1.0",
+    "eslint": "~3.19.0",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mocha": "^2.0.0",
     "eslint-plugin-react": "^4.1.0",
-    "godaddy-style": "^3.1.0",
+    "godaddy-style": "~3.2.1",
     "hock": "^1.2.0",
     "istanbul": "^0.3.17",
     "mocha": "^2.2.5",
     "mocha-istanbul": "^0.2.0",
     "npm": "~2.14.5",
-    "npm-registry-couchapp": "^2.6.11",
-    "proxyquire": "^1.6.0",
+    "npm-registry-couchapp": "~2.6.13",
+    "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
-    "request": "^2.61.0",
-    "sinon": "^1.16.1",
+    "request": "~2.81.0",
+    "sinon": "~1.17.7",
     "tmp": "0.0.31"
   }
 }
