--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "scripts": {
     "start": "./bin/server",
     "cover": "istanbul cover ./node_modules/.bin/_mocha test/",
-    "pretest": "npm run lint",
+    "pretest": "npm run eslint",
     "test": "npm run cover && npm run report",
     "report": "istanbul report cobertura",
-    "eslint": "godaddy-js-style-eslint -c .eslintrc lib/ test/",
-    "jscs": "godaddy-js-style-jscs lib/ test/",
-    "lint": "npm run jscs && npm run eslint",
+    "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
     "sandbox": "npm-registry-echo"
   },
   "repository": {
@@ -76,11 +74,11 @@
     "babel-eslint": "^6.1.2",
     "datastar-test-tools": "~1.0.0",
     "diagnostics": "~1.1.0",
-    "eslint": "~3.19.0",
+    "eslint": "^4.4.1",
+    "eslint-config-godaddy-react": "^2.0.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^2.0.0",
-    "eslint-plugin-react": "^4.1.0",
-    "godaddy-style": "~3.2.1",
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-react": "^7.1.0",
     "hock": "^1.2.0",
     "istanbul": "^0.3.17",
     "mocha": "^2.2.5",
