--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "access-control": "^1.0.0",
     "async": "^1.4.1",
+    "basic-auth": "^2.0.0",
     "bffs": "^5.0.0",
     "body-parser": "~1.17.2",
     "carpenterd-api-client": "^1.3.0",
