--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-sudo: false
+sudo: required
+dist: trusty
 language: node_js
 node_js:
+  - "8"
   - "6"
-  - "4"
 services:
   - cassandra
 before_install:
-  - "npm install -g npm@3"
