--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "start": "./bin/server",
-    "cover": "istanbul cover ./node_modules/.bin/_mocha test/",
+    "cover": "nyc mocha test/",
     "pretest": "npm run eslint",
     "test": "npm run cover && npm run report",
-    "report": "istanbul report cobertura",
+    "report": "nyc report --reporter=lcov",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
     "sandbox": "npm-registry-echo"
   },
@@ -82,11 +82,10 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.1.0",
     "hock": "^1.2.0",
-    "istanbul": "^0.3.17",
     "mocha": "^2.2.5",
-    "mocha-istanbul": "^0.2.0",
     "npm": "~2.14.5",
     "npm-registry-couchapp": "~2.6.13",
+    "nyc": "^11.8.0",
     "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
     "request": "~2.81.0",
