--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
     "request": "~2.81.0",
-    "sinon": "~1.17.7",
+    "sinon": "^6.1.4",
     "tmp": "0.0.31"
   }
 }
