--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "concat-stream": "~1.6.0",
     "cookie-parser": "^1.3.5",
     "datastar": "~1.3.2",
+    "debra": "^1.8.0",
     "errs": "^0.3.2",
     "etag": "~1.8.0",
     "extend": "~3.0.1",
@@ -54,6 +55,7 @@
     "json-try-parse": "^1.0.0",
     "lodash.merge": "~3.3.2",
     "mime": "~1.3.6",
+    "morgan-json": "^1.1.0",
     "ndjson": "~1.4.4",
     "npm-publish-split-stream": "^1.0.0",
     "npm-verify-stream": "^1.3.1",
@@ -89,7 +91,7 @@
     "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
     "request": "~2.81.0",
-    "sinon": "~1.17.7",
+    "sinon": "^6.1.4",
     "tmp": "0.0.31"
   }
 }
