[dist] support fetching release-lines from warehouse.ai

--- a/package.json
+++ b/package.json
@@ -32,20 +32,22 @@
   "author": "GoDaddy.com Operating Company LLC",
   "license": "MIT",
   "dependencies": {
+    "@wrhs/release-line": "^1.0.0",
     "access-control": "^1.0.0",
     "async": "^1.4.1",
     "authboot": "^2.0.1",
     "basic-auth": "^2.0.0",
     "bffs": "^5.0.0",
-    "body-parser": "~1.17.2",
+    "body-parser": "^1.18.3",
     "carpenterd-api-client": "^1.3.0",
     "commenting": "~1.0.3",
     "concat-stream": "~1.6.0",
     "cookie-parser": "^1.3.5",
-    "datastar": "~1.3.2",
+    "datastar": "^1.6.0",
     "debra": "^1.8.0",
     "errs": "^0.3.2",
     "etag": "~1.8.0",
+    "express-async-handler": "^1.1.4",
     "extend": "~3.0.1",
     "failure": "1.1.x",
     "gjallarhorn": "^1.2.1",
@@ -68,7 +70,7 @@
     "slay-config": "^2.1.0",
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
-    "warehouse-models": "~5.6.0",
+    "warehouse-models": "^5.8.0",
     "winston": "~2.3.1",
     "zipline": "^1.0.0"
   },
@@ -90,7 +92,7 @@
     "nyc": "^11.8.0",
     "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
-    "request": "~2.81.0",
+    "request": "^2.88.0",
     "sinon": "^6.1.4",
     "tmp": "0.0.31"
   }
