[dist] update package-lock.json

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "proxyquire": "~1.8.0",
     "registry-mock": "^2.0.0",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "sinon": "^6.1.4",
     "tmp": "0.0.31"
   }
