--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "npm-publish-split-stream": "^1.0.0",
     "npm-verify-stream": "^1.3.1",
     "once": "^1.3.2",
+    "p-limit": "^2.1.0",
     "passport": "0.3.2",
     "passport-npm": "2.0.0",
     "readable-stream": "~2.2.11",
@@ -71,6 +72,7 @@
     "slay-config": "^2.1.0",
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
+    "tinythen": "^1.0.1",
     "warehouse-models": "^5.8.0",
     "winston": "~2.3.1",
     "zipline": "^1.0.0"
