[dist] add packages

--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   "author": "GoDaddy.com Operating Company LLC",
   "license": "MIT",
   "dependencies": {
-    "@wrhs/release-line": "^1.0.0",
+    "@wrhs/release-line": "^1.1.0",
     "access-control": "^1.0.0",
     "async": "^1.4.1",
     "authboot": "^2.0.1",
     "basic-auth": "^2.0.0",
-    "bffs": "^5.0.0",
+    "bffs": "^5.2.1",
     "body-parser": "^1.18.3",
-    "carpenterd-api-client": "^1.3.0",
+    "carpenterd-api-client": "^2.0.0",
     "commenting": "~1.0.3",
     "concat-stream": "~1.6.0",
     "cookie-parser": "^1.3.5",
     "datastar": "^1.6.0",
-    "debra": "^1.8.0",
+    "debra": "^1.8.1",
     "errs": "^0.3.2",
     "etag": "~1.8.0",
     "express-async-handler": "^1.1.4",
@@ -56,7 +56,7 @@
     "ioredis": "^1.9.0",
     "json-try-parse": "^1.0.0",
     "lodash.merge": "~3.3.2",
-    "mime": "~1.3.6",
+    "mime": "^1.6.0",
     "morgan-json": "^1.1.0",
     "ndjson": "~1.4.4",
     "npm-publish-split-stream": "^1.0.0",
@@ -67,7 +67,7 @@
     "passport-npm": "2.0.0",
     "readable-stream": "~2.2.11",
     "retryme": "^1.1.0",
-    "semver": "^5.0.1",
+    "semver": "^5.6.0",
     "slay": "~1.0.2",
     "slay-config": "^2.1.0",
     "slay-log": "^2.1.0",
@@ -78,8 +78,8 @@
     "zipline": "^1.0.0"
   },
   "devDependencies": {
-    "assume": "~1.5.1",
-    "assume-sinon": "^0.0.0",
+    "assume": "^1.5.2",
+    "assume-sinon": "0.0.0",
     "babel-eslint": "^6.1.2",
     "datastar-test-tools": "~1.0.0",
     "diagnostics": "~1.1.0",
@@ -88,16 +88,17 @@
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.1.0",
-    "hock": "^1.2.0",
-    "mocha": "^2.2.5",
-    "npm": "~2.14.5",
+    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
+    "npm": "^6.5.0",
     "npm-registry-couchapp": "~2.6.13",
     "nyc": "^11.8.0",
     "proxyquire": "~1.8.0",
+    "read-only-stream": "^2.0.0",
     "registry-mock": "^2.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "sinon": "^6.1.4",
+    "sinon": "^6.3.5",
     "tmp": "0.0.31"
   }
 }
