--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "async": "^1.4.1",
     "authboot": "^2.0.1",
     "basic-auth": "^2.0.0",
-    "bffs": "^5.2.1",
+    "bffs": "^5.3.0",
     "body-parser": "^1.18.3",
     "carpenterd-api-client": "^2.0.0",
     "commenting": "~1.0.3",
@@ -52,7 +52,7 @@
     "failure": "1.1.x",
     "gjallarhorn": "^1.2.1",
     "http-proxy": "~1.16.2",
-    "hyperquest": "~1.3.0",
+    "hyperquest": "^2.1.3",
     "ioredis": "^1.9.0",
     "json-try-parse": "^1.0.0",
     "lodash.merge": "~3.3.2",
@@ -73,7 +73,7 @@
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
     "tinythen": "^1.0.1",
-    "warehouse-models": "^5.8.0",
+    "warehouse-models": "^5.9.1",
     "winston": "~2.3.1",
     "zipline": "^1.0.0"
   },
