other bumps and linter auto-fixes

--- a/package.json
+++ b/package.json
@@ -78,27 +78,27 @@
     "zipline": "^1.0.0"
   },
   "devDependencies": {
-    "assume": "^1.5.2",
-    "assume-sinon": "0.0.0",
-    "babel-eslint": "^6.1.2",
+    "assume": "^2.1.0",
+    "assume-sinon": "1.0.0",
+    "babel-eslint": "^10.0.1",
     "datastar-test-tools": "~1.0.0",
-    "diagnostics": "~1.1.0",
-    "eslint": "^4.4.1",
-    "eslint-config-godaddy-react": "^2.0.0",
+    "diagnostics": "^2.0.0",
+    "eslint": "^5.14.1",
+    "eslint-config-godaddy-react": "^4.1.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.1.0",
-    "mocha": "^5.2.0",
+    "mocha": "^6.0.2",
     "nock": "^10.0.6",
     "npm": "^6.8.0",
     "npm-registry-couchapp": "~2.6.13",
-    "nyc": "^11.8.0",
+    "nyc": "^13.3.0",
     "proxyquire": "~1.8.0",
     "read-only-stream": "^2.0.0",
     "registry-mock": "^2.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "sinon": "^6.3.5",
+    "sinon": "^7.2.4",
     "tmp": "0.0.31"
   }
 }
