--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.1.0",
     "json-refs": "^3.0.12",
+    "mermaid": "^8.0.0",
     "mocha": "^6.0.2",
     "nock": "^10.0.6",
     "npm": "^6.8.0",
