--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "posttest": "npm run eslint",
     "report": "nyc report --reporter=lcov",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
-    "diagrams": "./bin/diagrams",
+    "diagrams": "wrhs-diagrams",
     "sandbox": "npm-registry-echo",
     "swagger": "./bin/swagger"
   },
@@ -83,10 +83,10 @@
     "zipline": "^1.0.0"
   },
   "devDependencies": {
+    "@wrhs/diagrams": "^1.0.0",
     "assume": "^2.1.0",
     "assume-sinon": "1.0.0",
     "babel-eslint": "^10.0.1",
-    "canihaz": "^1.1.0",
     "datastar-test-tools": "~1.0.0",
     "diagnostics": "^2.0.1",
     "eslint": "^5.14.1",
@@ -109,8 +109,5 @@
     "sinon": "^7.2.4",
     "swagger-jsdoc": "^3.2.7",
     "tmp": "0.0.31"
-  },
-  "cliDependencies": {
-    "puppeteer": "^1.14.0"
   }
 }
