--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
     "diagrams": "wrhs-diagrams --source=assets/diagrams --target=assets",
     "sandbox": "npm-registry-echo",
-    "swagger": "./bin/swagger"
+    "swagger": "./bin/swagger",
+    "apiDocs": "npm run swagger && json2yaml ./lib/wrhs-spec.json > ./lib/wrhs-spec.yaml && swagger-markdown -i ./lib/wrhs-spec.yaml -o ./apiDocs/wrhs-spec.md"
   },
   "repository": {
     "type": "git",
@@ -95,6 +96,7 @@
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.13.0",
     "json-refs": "^3.0.12",
+    "json2yaml": "^1.1.0",
     "mermaid": "^8.0.0",
     "mocha": "^6.0.2",
     "nock": "^10.0.6",
@@ -108,6 +110,7 @@
     "request-promise-native": "^1.0.5",
     "sinon": "^7.2.4",
     "swagger-jsdoc": "^3.2.7",
+    "swagger-markdown": "^1.2.0",
     "tmp": "0.0.31"
   }
 }
