[wip] make the test work out of mock hell

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "sinon": "^7.2.4",
     "swagger-jsdoc": "^3.2.7",
     "swagger-markdown": "^1.2.0",
+    "through2": "^3.0.1",
     "tmp": "0.0.31"
   }
 }
