--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "prepublishOnly": "npm run swagger",
     "pretest": "npm run swagger",
     "test": "npm run cover && npm run report",
-    "posttest": "npm run eslint",
+    "posttest": "npm run lint",
     "report": "nyc report --reporter=lcov",
-    "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
+    "lint": "eslint-godaddy -c .eslintrc lib/ test/",
     "diagrams": "wrhs-diagrams --source=assets/diagrams --target=assets",
+    "localstack": "docker run -it -p 4569:4569 -p 4572:4572 --rm localstack/localstack",
     "sandbox": "npm-registry-echo",
     "swagger": "swagger-jsdoc-deref -d ./lib/swagger.js -o ./lib/wrhs-spec.json",
     "apiDocs": "npm run swagger && json2yaml ./lib/wrhs-spec.json > ./lib/wrhs-spec.yaml && swagger-markdown -i ./lib/wrhs-spec.yaml -o ./apiDocs/wrhs-spec.md"
@@ -42,7 +43,7 @@
     "async": "^3.1.0",
     "authboot": "^2.0.1",
     "basic-auth": "^2.0.0",
-    "bffs": "^7.0.0",
+    "bffs": "^7.0.1",
     "body-parser": "^1.19.0",
     "carpenterd-api-client": "^2.0.0",
     "commenting": "^1.1.0",
