--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "access-control": "^1.0.0",
     "async": "^3.1.0",
     "authboot": "^2.0.1",
+    "aws-liveness": "^1.1.0",
+    "aws-sdk": "^2.567.0",
     "basic-auth": "^2.0.0",
     "bffs": "^7.0.1",
     "body-parser": "^1.19.0",
@@ -49,8 +51,9 @@
     "commenting": "^1.1.0",
     "concat-stream": "~1.6.0",
     "cookie-parser": "^1.3.5",
-    "datastar": "^1.7.0",
     "debra": "^1.8.1",
+    "dynamodb-x": "^1.2.3",
+    "dynastar": "^1.1.0",
     "errs": "^0.3.2",
     "etag": "~1.8.0",
     "express-async-handler": "^1.1.4",
