--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "body-parser": "^1.19.0",
     "carpenterd-api-client": "^2.0.0",
     "commenting": "^1.1.0",
-    "concat-stream": "~1.6.0",
+    "concat-stream": "^2.0.0",
     "cookie-parser": "^1.3.5",
     "debra": "^1.8.1",
     "dynamodb-x": "^1.2.3",
@@ -72,9 +72,9 @@
     "npm-verify-stream": "^1.3.1",
     "once": "^1.3.2",
     "p-limit": "^2.2.1",
-    "passport": "0.3.2",
+    "passport": "^0.4.0",
     "passport-npm": "2.0.0",
-    "readable-stream": "~2.2.11",
+    "readable-stream": "^3.4.0",
     "retryme": "^1.1.0",
     "semver": "^6.3.0",
     "slay": "~1.0.2",
@@ -114,6 +114,6 @@
     "sinon": "^7.5.0",
     "swagger-jsdoc-deref": "^1.0.0",
     "swagger-markdown": "^1.2.0",
-    "tmp": "0.0.31"
+    "tmp": "^0.1.0"
   }
 }
