--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepublishOnly": "npm run swagger",
     "pretest": "npm run swagger",
     "test": "npm run cover && npm run report",
+    "testAssets": "nyc mocha test/integration",
     "posttest": "npm run lint",
     "report": "nyc report --reporter=lcov",
     "lint": "eslint-godaddy -c .eslintrc \"{lib,test}/**/*.js\"",
@@ -59,6 +60,7 @@
     "express-async-handler": "^1.1.4",
     "extend": "~3.0.1",
     "failure": "1.1.x",
+    "fingerprinting": "^1.0.1",
     "gjallarhorn": "^1.2.1",
     "http-proxy": "^1.18.0",
     "hyperquest": "^2.1.3",
@@ -71,6 +73,7 @@
     "npm-publish-split-stream": "^1.0.0",
     "npm-verify-stream": "^1.3.1",
     "once": "^1.3.2",
+    "one-time": "^1.0.0",
     "p-limit": "^2.2.1",
     "passport": "^0.4.0",
     "passport-npm": "2.0.0",
@@ -82,7 +85,10 @@
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
     "swagger-ui-express": "^4.1.2",
+    "tar-fs": "^2.1.0",
+    "through2": "~3.0.1",
     "tinythen": "^1.0.1",
+    "walk": "^2.3.14",
     "warehouse-models": "^6.0.1",
     "winston": "~2.3.1",
     "zipline": "^1.0.0"
