--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "author": "GoDaddy.com Operating Company LLC",
   "license": "MIT",
   "dependencies": {
+    "@jsdevtools/readdir-enhanced": "^6.0.3",
     "@wrhs/release-line": "^2.0.0",
     "access-control": "^1.0.0",
     "async": "^3.1.0",
@@ -45,7 +46,7 @@
     "aws-liveness": "^1.1.0",
     "aws-sdk": "^2.567.0",
     "basic-auth": "^2.0.0",
-    "bffs": "^7.0.1",
+    "bffs": "^7.1.0",
     "body-parser": "^1.19.0",
     "carpenterd-api-client": "^2.0.0",
     "commenting": "^1.1.0",
@@ -59,6 +60,7 @@
     "express-async-handler": "^1.1.4",
     "extend": "~3.0.1",
     "failure": "1.1.x",
+    "fingerprinting": "^1.0.1",
     "gjallarhorn": "^1.2.1",
     "http-proxy": "^1.18.0",
     "hyperquest": "^2.1.3",
@@ -82,6 +84,8 @@
     "slay-log": "^2.1.0",
     "stringify-stream": "^1.0.3",
     "swagger-ui-express": "^4.1.2",
+    "tar-fs": "^2.1.0",
+    "through2": "~3.0.1",
     "tinythen": "^1.0.1",
     "warehouse-models": "^6.0.1",
     "winston": "~2.3.1",
