[fix] Add locale support to PUT route, fix tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
   - docker
 
 before_install:
-  - docker pull localstack/localstack
-  - docker run -d -p 127.0.0.1:4569:4569 -p 127.0.0.1:4572:4572 --name localstack localstack/localstack
+  - docker pull localstack/localstack:0.11.3
+  - docker run -d -p 127.0.0.1:4566 --name localstack localstack/localstack
 
 install: npm install
 
