--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "prepublishOnly": "npm run swagger",
     "pretest": "npm run swagger",
     "test": "npm run cover && npm run report",
+    "test:debug": "mocha --no-timeouts test/",
     "posttest": "npm run lint",
     "report": "nyc report --reporter=lcov",
     "lint": "eslint-godaddy -c .eslintrc \"{lib,test}/**/*.js\"",
     "diagrams": "wrhs-diagrams --source=assets/diagrams --target=assets",
-    "localstack": "docker run -it -p 4569:4569 -p 4572:4572 --rm localstack/localstack",
+    "localstack": "docker run -it -p 4566:4566 --rm localstack/localstack",
     "sandbox": "npm-registry-echo",
     "swagger": "swagger-jsdoc-deref -d ./lib/swagger.js -o ./lib/wrhs-spec.json",
     "apiDocs": "npm run swagger && json2yaml ./lib/wrhs-spec.json > ./lib/wrhs-spec.yaml && swagger-markdown -i ./lib/wrhs-spec.yaml -o ./apiDocs/wrhs-spec.md"
