--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 before_install:
   - docker pull localstack/localstack:0.11.3
-  - docker run -d -p 127.0.0.1:4566:4566 --name localstack localstack/localstack
+  - docker run -d -p 127.0.0.1:4566:4566 --name localstack localstack/localstack:0.11.3
 
 install: npm install
 
