--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "report": "nyc report --reporter=lcov",
     "lint": "eslint-godaddy -c .eslintrc \"{lib,test}/**/*.js\"",
     "diagrams": "wrhs-diagrams --source=assets/diagrams --target=assets",
-    "localstack": "docker run -it -p 4566:4566 --rm localstack/localstack",
+    "localstack": "docker run -it -p 4566:4566 --rm localstack/localstack:0.11.3",
     "sandbox": "npm-registry-echo",
     "swagger": "swagger-jsdoc-deref -d ./lib/swagger.js -o ./lib/wrhs-spec.json",
     "apiDocs": "npm run swagger && json2yaml ./lib/wrhs-spec.json > ./lib/wrhs-spec.yaml && swagger-markdown -i ./lib/wrhs-spec.yaml -o ./apiDocs/wrhs-spec.md"
