--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fastify-auth": "^1.0.1",
     "fastify-autoload": "^3.3.0",
     "fastify-plugin": "^2.3.0",
+    "fastify-sensible": "^3.0.1",
     "pino": "^6.7.0"
   },
   "devDependencies": {
