--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "test": "test"
   },
   "dependencies": {
+    "aws-sdk": "^2.786.0",
+    "dotenv": "^8.2.0",
     "fastify": "^3.0.0",
     "fastify-auth": "^1.0.1",
     "fastify-autoload": "^3.3.0",
     "fastify-plugin": "^2.3.0",
+    "fastify-sensible": "^3.0.1",
     "pino": "^6.7.0"
   },
   "devDependencies": {
@@ -19,13 +22,14 @@
     "eslint-config-godaddy": "^4.0.1",
     "fastify-cli": "^2.3.0",
     "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
     "standard-version": "^9.0.0",
     "tap": "^14.0.0"
   },
   "scripts": {
     "lint": "npm run prettier && npm run eslint",
     "eslint": "eslint-godaddy --max-warnings 0 --ignore-pattern /coverage/ ./",
-    "prettier": "prettier --write 'lib/*.js'",
+    "prettier": "prettier --write lib",
     "release": "standard-version -t ''",
     "test": "tap test/**/*.test.js",
     "start": "node lib/app.js",
