--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "scripts": {
     "lint": "npm run prettier && npm run eslint",
     "eslint": "eslint-godaddy --max-warnings 0 --ignore-pattern /coverage/ ./",
-    "prettier": "prettier --write lib",
+    "prettier": "prettier --write lib bin",
     "release": "standard-version -t ''",
     "test": "tap test/**/*.test.js",
     "start": "node lib/app.js",
-    "dev": "nodemon lib/app.js"
+    "dev": "LOCALSTACK=1 AWS_ACCESS_KEY_ID=foobar AWS_SECRET_ACCESS_KEY=foobar nodemon lib/app.js",
+    "localstack": "docker run -it -p 4569:4569 -p 9999:8080 -e SERVICES=dynamodb -e DEBUG=1 --rm localstack/localstack:0.10.5"
   },
   "repository": {
     "type": "git",
