--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastify-autoload": "^3.3.0",
     "fastify-plugin": "^2.3.0",
     "fastify-sensible": "^3.0.1",
+    "fingerprinting": "^1.0.1",
     "pino": "^6.7.0"
   },
   "devDependencies": {
