--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fastify-plugin": "^2.3.0",
     "fastify-sensible": "^3.0.1",
     "fingerprinting": "^1.0.1",
-    "pino": "^6.7.0"
+    "pino": "^6.7.0",
+    "tar": "^6.0.5"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
