--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastify-autoload": "^3.3.0",
     "fastify-plugin": "^2.3.0",
     "fastify-sensible": "^3.0.1",
+    "fastify-swagger": "^3.5.0",
     "fingerprinting": "^1.0.1",
     "ms": "^2.1.2",
     "pino": "^6.7.0",
