--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-godaddy": "^4.0.1",
     "fastify-cli": "^2.3.0",
     "nodemon": "^2.0.4",
+    "pino-pretty": "^4.3.0",
     "prettier": "^2.1.2",
     "standard-version": "^9.0.0",
     "tap": "^14.0.0"
@@ -37,7 +38,7 @@
     "test": "tap test/**/*.test.js",
     "start": "node lib/app.js",
     "init-localstack": "./bin/init-localstack.js",
-    "dev": "LOCALSTACK=1 AWS_ACCESS_KEY_ID=foobar AWS_SECRET_ACCESS_KEY=foobar nodemon lib/app.js",
+    "dev": "LOCALSTACK=1 nodemon lib/app.js",
     "localstack": "docker run -it -p 4566:4566 -p 9999:8080 -e SERVICES=dynamodb,s3 -e DEBUG=1 --rm localstack/localstack:0.11.6"
   },
   "repository": {
