--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      LOCALSTACK: 1
       LOCALSTACK_URL: http://localstack:4566
     services:
       localstack:
@@ -22,4 +23,5 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+      - run: npm run init-localstack
       - run: npm test
