--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       LOCALSTACK: 1
-      LOCALSTACK_URL: http://localstack:4566
+      LOCALSTACK_URL: http://127.0.0.1:4566
     services:
       localstack:
         image: localstack/localstack:0.11.6
