--- a/wrhs-next-spec.yml
+++ b/wrhs-next-spec.yml
@@ -40,6 +40,7 @@ paths:
                           type: string
                         metadata:
                           type: object
+                          nullable: true
                           additionalProperties: true
   "/objects/{name}":
     get:
@@ -166,11 +167,6 @@ paths:
       responses:
         "204":
           description: Default Response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
     put:
       parameters:
         - required: true
@@ -196,11 +192,6 @@ paths:
       responses:
         "204":
           description: Default Response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
   "/objects/{name}/{env}/{version}":
     delete:
       parameters:
@@ -227,11 +218,6 @@ paths:
       responses:
         "204":
           description: Default Response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
   /:
     get:
       responses:
