--- a/wrhs-next-spec.yml
+++ b/wrhs-next-spec.yml
@@ -111,6 +111,7 @@ paths:
                 properties:
                   headVersion:
                     type: string
+                    nullable: true
                   latestVersion:
                     type: string
   /objects:
