--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.786.0",
+    "compare-versions": "^3.6.0",
     "dotenv": "^8.2.0",
     "fastify": "^3.0.0",
     "fastify-auth": "^1.0.1",
