--- a/wrhs-next-spec.yml
+++ b/wrhs-next-spec.yml
@@ -242,6 +242,7 @@ paths:
                   type: number
                   minimum: 1
                   maximum: 20
+                  default: 1
       responses:
         "204":
           description: Default Response
