--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warehouse.ai",
-  "version": "7.0.0",
+  "version": "7.0.0-alpha.0",
   "description": "Scalable Object Ledger and CDN",
   "main": "lib/app.js",
   "directories": {
