--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warehouse.ai",
-  "version": "7.0.0-alpha.1",
+  "version": "7.0.0-alpha.2",
   "description": "Scalable Object Ledger and CDN",
   "main": "lib/app.js",
   "directories": {
@@ -8,19 +8,21 @@
     "test": "test"
   },
   "dependencies": {
-    "aws-sdk": "^2.786.0",
     "compare-versions": "^3.6.0",
     "dotenv": "^8.2.0",
-    "fastify": "^3.0.0",
     "fastify-auth": "^1.0.1",
     "fastify-autoload": "^3.3.0",
-    "fastify-plugin": "^2.3.0",
     "fastify-sensible": "^3.0.1",
     "fastify-swagger": "^3.5.0",
     "fingerprinting": "^1.0.1",
     "ms": "^2.1.2",
     "pino": "^6.7.0",
     "tar": "^6.0.5"
+  },
+  "peerDependencies": {
+    "aws-sdk": ">= 2.800.0 < 3",
+    "fastify": ">= 3.0.0 < 4",
+    "fastify-plugin": ">= 3.0.0 < 4"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
