--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
+      - run: npm i -g npm@7.6.3
       - run: npm ci
       - run: npm run init-localstack
       - run: npm test
