add category and type

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "lint": "npm run prettier && npm run eslint",
-    "eslint": "eslint-godaddy --max-warnings 0 --ignore-pattern /coverage/ ./",
+    "eslint": "eslint-godaddy --ignore-pattern /coverage/ ./",
     "prettier": "prettier --write lib bin test",
     "release": "standard-version -t ''",
     "test": "tap test/**/*.test.js",
