--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "fastify-auth": "^1.0.1",
     "fastify-autoload": "^3.3.0",
+    "fastify-etag": "^2.1.0",
     "fastify-sensible": "^3.0.1",
     "fastify-swagger": "^3.5.0",
     "fingerprinting": "^1.0.1",
