--- a/wrhs-next-spec.yml
+++ b/wrhs-next-spec.yml
@@ -1,9 +1,8 @@
 openapi: 3.0.2
 info:
   title: warehouse.ai
-  version: 7.0.0
+  version: 7.2.0
   description: Scalable Object Ledger and CDN
-definitions: {}
 paths:
   /cdn:
     post:
@@ -47,6 +46,121 @@ paths:
                           additionalProperties: true
                           nullable: true
                           type: object
+  "/objects/{name}/envs":
+    get:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    env:
+                      type: string
+                    aliases:
+                      type: array
+                      items:
+                        type: string
+    post:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - env
+              properties:
+                env:
+                  type: string
+      responses:
+        "201":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  created:
+                    type: boolean
+  "/objects/{name}/envs/{env}":
+    get:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+        - required: true
+          in: path
+          name: env
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: string
+                  env:
+                    type: string
+                  aliases:
+                    type: array
+                    items:
+                      type: string
+  "/objects/{name}/envs/{env}/aliases":
+    post:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+        - required: true
+          in: path
+          name: env
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - alias
+              properties:
+                alias:
+                  type: string
+      responses:
+        "201":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  created:
+                    type: boolean
   "/objects/{name}":
     get:
       parameters:
@@ -92,6 +206,31 @@ paths:
                         - type: string
                         - type: object
                     variant:
+                      type: string
+  "/head/{name}":
+    get:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    environment:
+                      type: string
+                    headVersion:
+                      nullable: true
+                      type: string
+                    latestVersion:
                       type: string
   "/head/{name}/{env}":
     get:
@@ -157,6 +296,30 @@ paths:
                 properties:
                   created:
                     type: boolean
+  "/objects/{name}/versions":
+    get:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    version:
+                      type: string
+                    environments:
+                      type: array
+                      items:
+                        type: string
   "/objects/{name}/{env}":
     delete:
       parameters:
@@ -251,6 +414,34 @@ paths:
       responses:
         "204":
           description: Default Response
+  "/logs/{name}/{env}":
+    get:
+      parameters:
+        - required: true
+          in: path
+          name: name
+          schema:
+            type: string
+        - required: true
+          in: path
+          name: env
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    version:
+                      type: string
+                    releaseDate:
+                      type: string
+                      format: date-time
   /:
     get:
       responses:
