--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mime-types": "^2.1.29",
     "ms": "^2.1.2",
     "pino": "^6.7.0",
-    "tar": "^6.0.5"
+    "tar": "^6.0.5",
+    "uuid": "^9.0.0"
   },
   "peerDependencies": {
     "aws-sdk": ">= 2.800.0 < 3",
@@ -34,7 +35,7 @@
     "pino-pretty": "^4.3.0",
     "prettier": "^2.1.2",
     "standard-version": "^9.0.0",
-    "tap": "^14.0.0"
+    "tap": "^16.3.1"
   },
   "scripts": {
     "lint": "npm run prettier && npm run eslint",
