--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fingerprinting": "^1.0.1",
     "mime-types": "^2.1.29",
     "ms": "^2.1.2",
+    "node-fetch": "^2.6.9",
     "pino": "^6.7.0",
     "tar": "^6.0.5",
     "uuid": "^9.0.0"
@@ -31,6 +32,7 @@
     "eslint": "^7.10.0",
     "eslint-config-godaddy": "^4.0.1",
     "fastify-cli": "^2.3.0",
+    "nock": "^13.3.0",
     "nodemon": "^2.0.4",
     "pino-pretty": "^4.3.0",
     "prettier": "^2.1.2",
