--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "compare-versions": "^5.0.3",
     "dotenv": "^16.4.5",
     "fastify-auth": "^1.2.0",
@@ -15,7 +16,6 @@
     "fastify-etag": "^2.2.0",
     "fastify-sensible": "^3.2.0",
     "fastify-swagger": "^5.2.0",
-    "fingerprinting": "^1.0.1",
     "mime-types": "^2.1.35",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.9",
@@ -33,8 +33,8 @@
     "eslint": "^8.57.0",
     "eslint-config-godaddy": "^7.1.0",
     "fastify": "^3.29.5",
-    "fastify-plugin": "^4.5.1",
     "fastify-cli": "^2.3.0",
+    "fastify-plugin": "^4.5.1",
     "nock": "^13.5.4",
     "nodemon": "^2.0.22",
     "pino-pretty": "^10.0.0",
