--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "test"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
     "compare-versions": "^5.0.3",
     "dotenv": "^16.4.5",
     "fastify-auth": "^1.2.0",
@@ -16,6 +15,7 @@
     "fastify-etag": "^2.2.0",
     "fastify-sensible": "^3.2.0",
     "fastify-swagger": "^5.2.0",
+    "fingerprinting": "^1.0.1",
     "mime-types": "^2.1.35",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.9",
